# cairo-erc4626

./: .gitignore  Makefile  README.md  Scarb.toml  cairo_project.toml  protostar.toml  pyproject.toml
.github/workflows/: test.yaml  unit.yaml  unit.yml
dependencies/erc4626/: ERC4626.cairo  library.cairo
dependencies/erc4626/utils/: fixedpointmathlib.cairo
examples/staking/: SingleSidedStaking.cairo
examples/staking/interfaces/: ISplitter.cairo  SingleSidedStaking.cairo
openzeppelin/access/ownable/: library.cairo
openzeppelin/account/: library.cairo
openzeppelin/account/presets/: Account.cairo
openzeppelin/introspection/erc165/: ERC165.cairo  library.cairo
openzeppelin/security/safemath/: library.cairo
openzeppelin/token/erc20/: IERC20.cairo  library.cairo
openzeppelin/token/erc20/interfaces/: IERC20.cairo
openzeppelin/token/erc20/presets/: ERC20.cairo  ERC20Mintable.cairo
openzeppelin/utils/constants/: library.cairo
src/: fib.cairo  lib.cairo  math.cairo  test.cairo
src/test/: lib_test.cairo  math_test.cairo
tests/: conftest.py  test_fixedpointmathlib.cairo  test_fixedpointmathlib.py  util.py
tests/erc4626/: conftest.py  test_ERC4626.py  test_erc4626.cairo
tests/mocks/: ERC4626_mock.cairo  fixedpointmathlib_mock.cairo
yagi/erc4626/: ERC4626.cairo  library.cairo
yagi/erc4626/interfaces/: IERC4626.cairo
yagi/utils/: fixedpointmathlib.cairo  safeerc20.cairo
