[tool.poetry]
name = "cairo-erc4626"
version = "0.1.0"
description = ""
authors = ["Peteris Erins <peteris@auditless.com>"]

[tool.poetry.dependencies]
python = "3.9.16"
marshmallow-dataclass = "8.5.3"

[tool.poetry.dev-dependencies]
cairo-lang = "^0.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
